# payment_fraud_detection_mlops

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile.fastapi  Dockerfile.mlflow  Dockerfile.mlflow.local  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: README.md
docs/adr/: decisions.md
notebooks/: 01_eda.ipynb  02_baseline_model.ipynb  03_feature_engineering.ipynb
scripts/: download_data.sh  run_mlflow_server.sh
src/fraud_mlops/: __init__.py  api.py  config.py  data.py  inference.py  metrics.py  schemas.py  tracking.py
tests/: __init__.py  test_api.py  test_inference.py  test_metrics.py
