[project]
name = "fraud-mlops"
version = "0.1.0"
description = "Real-time UPI fraud detection MLOps pipeline"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Pranav" }]
license = { text = "MIT" }

dependencies = [
    # Core data & ML
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "joblib>=1.3.0",
    # Plotting
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    # Utilities
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "mlflow>=2.16.0",
]

[project.optional-dependencies]
dev = [
    # Notebooks
    "jupyterlab>=4.0.0",
    "ipykernel>=6.29.0",
    "nbstripout>=0.7.0",
    # Code quality
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fraud_mlops"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"notebooks/*" = ["E402", "F401"]  # notebooks have flexible import order
"src/fraud_mlops/data.py" = ["N806"]  # X is sklearn convention for feature matrix

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # relaxed for now; tighten later

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/fraud_mlops --cov-report=term-missing"
